--- a/index.html
+++ b/index.html
@@ -27,8 +27,26 @@
         </div>
     </div>
     <div class="rand-info">
-        
-    </div>
+        <div class="title2">Some random information.</div>
+        <div class="container">
+            <div class="info">
+                <div class="img-container"></div>
+                <div class="text">this is some subtext under an illustration or image</div>
+            </div>    
+            <div class="info">
+                <div class="img-container"></div>
+                <div class="text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="info">
+                <div class="img-container"></div>
+                <div class="text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="info">
+               <div class="img-container"></div>
+               <div class="text">this is some subtext under an illustration or image</div>    
+            </div>
+        </div>
+    </div>    
     <div class="quote">
         
     </div>
