--- a/index.html
+++ b/index.html
@@ -47,8 +47,11 @@
             </div>
         </div>
     </div>    
-    <div class="quote">
-        
+    <div class="quote-container">
+        <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually like it.
+            Who knows? All I know is that it looks nice.
+        </div>
+        <div class="quote2">-Thor, God of Thunder</div>
     </div>
     <div class="call-button">
         <div class="footer">
