--- a/index.html
+++ b/index.html
@@ -54,9 +54,16 @@
         <div class="quote2">-Thor, God of Thunder</div>
     </div>
     <div class="call-button">
-        <div class="footer">
-            
+        <div class="box">
+                <div class="p1">
+                    <div class="t1">Call to action! It's time!</div>
+                    <div class="t2">Sign up for our product by clicking that button right over there!</div>
+                </div>
+                <button class="sign-up">Sign up</button>
         </div>
+    </div>
+    <div class="footer">
+        Copyright © The Odin Project 2021
     </div>
 </body>
 </html>
